error_defense.txt
    Checking praborrow-core v0.8.0 (D:\Project\PraBorrow\crates\praborrow-core)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `std`
  --> crates\praborrow-core\src\lib.rs:73:17
   |
73 |         values: std::collections::HashMap<String, String>,
   |                 ^^^ use of unresolved module or unlinked crate `std`
   |
   = help: if you wanted to use a crate named `std`, use `cargo add std` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `praborrow-core` (lib) due to 1 previous error
